[note] Add datetime field, set title min string len to 1

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "awilix": "^4.2.6",
     "cookie-parser": "~1.4.4",
+    "dateformat": "^4.0.0",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
